--- a/workbench/index.html
+++ b/workbench/index.html
@@ -10,9 +10,9 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <div ng-app="ng-grid" ng-controller="gridController">
+    <div ng-app="ngGrid" ng-controller="gridController" ng-grid="gridOptions">
         <button ng-click="btn_click()">Baby Born</button>
-        <div ng-grid="{data: myData}"></div>
+        <div ></div>
         <ul>
             <li ng-repeat="item in myData">{{item.name}}</li>
         </ul>
