--- a/workbench/index.html
+++ b/workbench/index.html
@@ -9,8 +9,7 @@
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
-<body>
-    <div style="width: 400px; height: 600px;" ng-app="ngGrid" ng-controller="gridController" ng-grid="gridOptions">
-    </div>
+<body ng-app="ngGrid" ng-controller="gridController">
+    <div style="width: 400px; height: 600px;" ng-grid="gridOptions"></div>
 </body>
 </html>
