checking in changes so far.

--- a/workbench/test.html
+++ b/workbench/test.html
@@ -8,7 +8,7 @@
 <body>
     <div ng-app="grid">
         <div ng-controller="gridController">
-            <div ng-grid="myData"><div>
+            <div ng-grid="myData"></div>
             <ul>
                 <li ng-repeat="item in myData">{{item.name}}</li>
             </ul>
@@ -18,5 +18,5 @@
 <script type="text/javascript" src="../lib/angular.js"></script>
 <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
 <!--<script type="text/javascript" src="../src/ng-grid-1.0.0.debug.js"></script>-->
-<script type="text/javascript" src="test.js"></script
+    <script type="text/javascript" src="test.js"></script>
 </html>
