--- a/workbench/index.html
+++ b/workbench/index.html
@@ -9,7 +9,8 @@
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
-<body ng-app="ngGrid" ng-controller="gridController">
-    <div style="width: 400px; height: 400px;" ng-grid="gridOptions"></div>
-</body>
+    <body>
+        <div style="width: 600px; height: 400px;" ng-app="ngGrid" ng-controller="userController" ng-grid="gridOptions">
+        </div>
+    </body>
 </html>
