trying to get selections to show up in the selectedItems arra for th euser

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -9,8 +9,9 @@
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
-    <body>
-        <div style="width: 600px; height: 400px;" ng-app="ngGrid" ng-controller="userController" ng-grid="gridOptions">
+    <body ng-app="ngGrid" ng-controller="userController">
+        <div style="width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
+        <button ng-click="showNumberOfItems()">Show Items</button>
     </body>
 </html>
