Fixed max rows. Fixed bug in IE in utils. Changed style of grid.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
     <body ng-app="ngGrid" ng-controller="userController">
-        <div style="width: 600px; height: 400px;" ng-grid="gridOptions">
+        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
         <button ng-click="showNumberOfItems()">Show Items</button>
     </body>
