fixing multi-Select behavior vs single select

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -12,6 +12,7 @@
     <body ng-app="ngGrid" ng-controller="userController">
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
-        <button ng-click="showNumberOfItems()">Show Items</button>
+        <span>mySelections: {{mySelections | json}}</span>
+        <span>mySelections: {{mySelection | json}}</span>
     </body>
 </html>
