fixing Shift-Select and prepping for resizable columns

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="largeLoad.js"></script>
 </head>
-    <body ng-app="ngGrid" ng-controller="userController">
+    <body ng-app="ngGrid" ng-controller="largeLoadController">
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
         <span>mySelections: {{mySelections | json}}</span>
