--- a/workbench/index.html
+++ b/workbench/index.html
@@ -6,10 +6,11 @@
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
+    <script type="text/javascript" src="../plugins/ng-grid-resizable.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="largeLoad.js"></script>
 </head>
-    <body ng-app="ngGrid" ng-controller="largeLoadController">
+    <body ng-app="ngGrid" ng-controller="userController">
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
         <span>mySelections: {{mySelections | json}}</span>
