--- a/workbench/index.html
+++ b/workbench/index.html
@@ -13,7 +13,8 @@
     <body ng-app="ngGrid" ng-controller="userController">
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
+        <button ng-click="changeData()">Insert Rows</button>
         <span>mySelections: {{mySelections | json}}</span>
-        <span>mySelections: {{mySelection | json}}</span>
+        
     </body>
 </html>
