updating references in the main index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="utf-8" />
     <title>ng-grid workbench</title>
-    <link rel="stylesheet" type="text/css" href="../ng-grid.css" /> 
-    <script type="text/javascript" src="../lib/angular.js"></script>
-    <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
-    <script type="text/javascript" src="../plugins/ng-grid-reorderable.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="largeLoad.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://raw.github.com/Crash8308/ng-grid/master/ng-grid.css" /> 
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/Crash8308/ng-grid/master/ng-grid-1.0.0.debug.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/Crash8308/ng-grid/master/workbench/main.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/Crash8308/ng-grid/master/workbench/largeLoad.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/Crash8308/ng-grid/master/plugins/ng-grid-reorderable.js"></script>
 </head>
     <body ng-app="ngGrid" ng-controller="userController">
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
