--- a/workbench/index.html
+++ b/workbench/index.html
@@ -9,12 +9,17 @@
     <script type="text/javascript" src="../plugins/ng-grid-reorderable.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="largeLoad.js"></script>
+    <script>
+        angular.module('myApp',['ngGrid']);
+    </script>
 </head>
-    <body ng-app="ngGrid" ng-controller="userController">
+    <body ng-app="myApp" ng-controller="userController">
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
         <button ng-click="changeData()">Insert Rows</button>
         <span>mySelections: {{mySelections | json}}</span>
-        
+        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
+        </div>
+        <span>mySelections2: {{mySelections2 | json}}</span>
     </body>
 </html>
