adding groupable plugin (WIP)
not intended for use yet.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
     <script type="text/javascript" src="../plugins/ng-grid-reorderable.js"></script>
+    <script type="text/javascript" src="../plugins/ng-grid-groupable.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
