Added cell template as an example.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -3,6 +3,13 @@
     <meta charset="utf-8" />
     <title>ng-grid workbench</title>
     <link rel="stylesheet" type="text/css" href="../ng-grid.css" />
+	<style type="text/css">
+		.red {
+			background-color:red;
+			height: 29px;
+			margin-top: 1px;
+		}
+	</style>
     <script type="text/javascript" src="largeLoad.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
