adding filters and more examples.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -9,6 +9,11 @@
 			height: 29px;
 			margin-top: 1px;
 		}
+        .green {
+        background-color:green;
+        height: 29px;
+        margin-top: 1px;
+		}
 	</style>
     <script type="text/javascript" src="largeLoad.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
