updating examples with more stuff

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -16,6 +16,7 @@
 		}
 	</style>
     <script type="text/javascript" src="largeLoad.js"></script>
+    <script type="text/javascript" src="largeTestData.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
