adding theme examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,9 @@
     <meta charset="utf-8" />
     <title>ng-grid workbench</title>
     <link rel="stylesheet" type="text/css" href="https://raw.github.com/timothyswt/ng-grid/master/ng-grid.css" /> 
+    <link rel="stylesheet" type="text/css" href="http://timothyswt.github.com/ng-grid/javascripts/bootstrap/css/bootstrap.css" /> 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
     <script type="text/javascript" src="https://raw.github.com/timothyswt/ng-grid/master/ng-grid-1.0.0.debug.js"></script>
     <script type="text/javascript" src="https://raw.github.com/timothyswt/ng-grid/master/workbench/main.js"></script>
@@ -22,6 +24,7 @@ Try:
             <li>Reordering columns and rows. (plugin ng-grid-reorderable)</li>
             <li>Selecting all (this is a multselect grid)</li>
             <li>double click the header grips to resize base don the column data.</li>
+            <li>Head on over <a href="http://timothyswt.github.com/ng-grid/examples/smoothness.html">here</a> to check out theme support</li>
         </ul>
         <div>
             <div style="margin: 10px;  width: 600px; height: 400px; style="float: left;" ng-grid="gridOptions">
