--- a/examples/smoothness.html
+++ b/examples/smoothness.html
@@ -2,16 +2,16 @@
 <head>
     <meta charset="utf-8" />
     <title>ng-grid workbench</title>
-    <link rel="stylesheet" type="text/css" href="https://raw.github.com/timothyswt/ng-grid/master/ng-grid.css" /> 
     <link rel="stylesheet" type="text/css" href="http://timothyswt.github.com/ng-grid/javascripts/jquery-ui/css/smoothness/jquery-ui-1.9.1.custom.min.css" /> 
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/jquery-ui/js/jquery-1.8.2.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/jquery-ui/js/jquery-ui-1.9.1.custom.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://timothyswt.github.com/ng-grid/stylesheets/ng-grid.css" /> 
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
     <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/timothyswt/ng-grid/master/ng-grid-1.0.0.debug.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/timothyswt/ng-grid/master/workbench/main.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/timothyswt/ng-grid/master/workbench/largeLoad.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/timothyswt/ng-grid/master/workbench/largeTestData.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/timothyswt/ng-grid/master/plugins/ng-grid-reorderable.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.0.0.debug.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/main.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/largeTestData.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-reorderable.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
     </script>
