--- a/workbench/index.html
+++ b/workbench/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <title>ng-grid workbench</title>
     <link rel="stylesheet" type="text/css" href="../ng-grid.css" />
-    <link rel="stylesheet" type="text/css" href="jquery-ui-1.9.1.custom/css/overcast/jquery-ui-1.9.1.custom.css" />
+    <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css" />
     
 	<style type="text/css">
 		.red {
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="largeTestData.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.9.1.custom/js/jquery-ui-1.9.1.custom.js"></script>
+    <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
     <script type="text/javascript" src="../plugins/ng-grid-reorderable.js"></script>
     <script type="text/javascript" src="../plugins/ng-grid-groupable.js"></script>
