creating new branch for working on implementing aggregates

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -36,8 +36,8 @@
         </div>
         <button ng-click="changeData()">Insert Rows</button>
         <span>mySelections: {{mySelections | json}}</span>
-        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
+<!--        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
         </div>
-        <span>mySelections2: {{mySelections2 | json}}</span>
+        <span>mySelections2: {{mySelections2 | json}}</span>-->
     </body>
 </html>
