fixing grouping with small datasets.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -32,7 +32,7 @@
 </head>
     <body ng-app="myApp" ng-controller="userController">
 
-        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
+        <div style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px;" ng-grid="gridOptions">
         </div>
         <button ng-click="changeData()">Insert Rows</button>
         <span>mySelections: {{mySelections | json}}</span>
