Added search grid example.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -31,7 +31,7 @@
     </script>
 </head>
     <body ng-app="myApp" ng-controller="userController">
-
+		<input ng-model="searchText" />
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
         <button ng-click="changeData()">Insert Rows</button>
