--- a/examples/index.html
+++ b/examples/index.html
@@ -24,8 +24,10 @@ Try:
             <li>Selecting all (this is a multselect grid)</li>
             <li>double click the header grips to resize base don the column data.</li>
             <li>Head on over <a href="http://timothyswt.github.com/ng-grid/examples/overcast.html">here</a> to check out theme support</li>
+			<li>Search using built-in angularjs filter</li>
         </ul>
         <div>
+			<input placeholder="Search..." ng-model="searchText" />
             <div style="margin: 10px;  width: 600px; height: 400px; style="float: left;" ng-grid="gridOptions">
             </div>
             <span style="float: right; width: 50%;">mySelections: {{mySelections | json}}</span>
