Fixed issue of modifying data without grid updating.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -38,6 +38,7 @@
         <span>mySelections: {{mySelections | json}}</span>
         <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
         </div>
+		<button ng-click="changingData()">getdata</button>
         <span>mySelections2: {{mySelections2 | json}}</span>
     </body>
 </html>
