--- a/workbench/index.html
+++ b/workbench/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="largeTestData.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery-ui-1.9.1.custom.js"></script>
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="../ng-grid-1.0.0.debug.js"></script>
     <script type="text/javascript" src="../plugins/ng-grid-reorderable.js"></script>
