fixing groupby example

--- a/examples/index.html
+++ b/examples/index.html
@@ -38,7 +38,7 @@ Try:
         <button ng-click="changeData()">Insert Rows</button>
         <p>This is a single select. You can navigate your selection with arrow keys! (up/down)</p>
         <div>
-            <div style="margin: 10px;  width: 600px; height: 400px; float: left;" ng-grid="gridOptions2">
+            <div style="margin: 10px;  width: 600px; height: 400px; clear: left;" ng-grid="gridOptions2">
             </div>
             <span style="float: right; width: 50%;">mySelections2: {{mySelections2 | json}}</span>
         </div>
