updating to latest ng-grid
also updating index page.

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 
 <h2>Want More?</h2>
 
-<p>Check out the <a href="https://github.com/Crash8308/ng-grid/wiki/Getting-Started">Getting Started</a> and other <a href="https://github.com/Crash8308/ng-grid/wiki">Docs</a></p>
+<p>Check out the <a href="https://github.com/timothyswt/ng-grid/wiki/Getting-Started">Getting Started</a> and other <a href="https://github.com/timothyswt/ng-grid/wiki">Docs</a></p>
 
 <h2>Examples</h2>
 
-<p>Coming soon...</p>
+<a href="https://timothyswt.github.com/ng-grid/examples">Examples Page ( warning! hideous... =( )</a>
 
 <h2>Change Log</h2>
       </section>
