updating index again

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 
 <p><strong>ng-grid</strong> Originally built on knockout we wanted to port it to angular.</p>
 
-<h2>Disclaimer</h2>
-
-<p>ng-grid is in pre-beta release currently. We are going to be adding more features here as we head to a 1.0 release.</p>
+<p>ng-grid is in its first iteration. We are going to be adding more features here as we head to a 2.0 release.</p>
 
 <hr><p><em>The bare bones</em>:</p>
 
