--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <h2>Examples</h2>
 
-<a href="https://timothyswt.github.com/ng-grid/examples">Examples Page ( warning! hideous... =( )</a>
+<a href="http://timothyswt.github.com/ng-grid/examples">Examples Page ( warning! hideous... =( )</a>
 
 <h2>Change Log</h2>
       </section>
