--- a/examples/darkness.html
+++ b/examples/darkness.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
     <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.0.0.debug.js"></script>
-    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/main.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/mainjqthemes.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
     </script>
@@ -22,7 +22,7 @@ Try:
             <li>Check out the <a href="http://timothyswt.github.com/ng-grid/examples/smoothness.html">smoothness</a> theme.</li>
             <li>Check out the <a href="http://timothyswt.github.com/ng-grid/examples/overcast.html">overcast</a> theme.</li>
         </ul>
-        <div style="margin: 10px;  width: 600px; height: 400px; style="float: left;" ng-grid="gridOptions">
+        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions">
         </div>
         <span style="float: right; width: 50%;">mySelections: {{mySelections | json}}</span>
     </body>
