--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
-    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.0.0.debug.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.1.0.debug.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/main.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/largeTestData.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-reorderable.js"></script>
@@ -29,13 +29,13 @@ Try:
         </ul>
         <div>
 			<input placeholder="Search..." ng-model="searchText" />
-            <div style="margin: 10px;  width: 600px; height: 400px; float: left;" ng-grid="gridOptions">
+            <div style="margin: 10px;  width: 600px; height: 400px; clear: left;" ng-grid="gridOptions">
             </div>
             <span style="float: right; width: 50%;">mySelections: {{mySelections | json}}</span>
         </div>
         <p>Try: 
         Adding more data..</p>
-        <button ng-click="changeData()">Insert Rows</button>
+        <button style="clear: right;" ng-click="changeData()">Insert Rows</button>
         <p>This is a single select. You can navigate your selection with arrow keys! (up/down)</p>
         <div>
             <div style="margin: 10px;  width: 600px; height: 400px; clear: left;" ng-grid="gridOptions2">
