--- a/examples/index.html
+++ b/examples/index.html
@@ -7,10 +7,9 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
-    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.1.0.debug.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.2.0.debug.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/main.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/largeTestData.js"></script>
-    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-reorderable.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
     </script>
@@ -25,7 +24,8 @@ Try:
             <li>double click the header grips to resize base don the column data.</li>
             <li>Head on over <a href="http://timothyswt.github.com/ng-grid/examples/overcast.html">here</a> to check out theme support.</li>
             <li>check out Group Aggregates <a href="http://timothyswt.github.com/ng-grid/examples/groupby.html">here</a>.</li>
-			<li>Search using built-in angularjs filter.</li>
+            <li>Search using built-in angularjs filter.</li>
+            <li>Check out server-side paging support <a href="http://timothyswt.github.com/ng-grid/examples/serversidepaging.html">here</a>.</li>
         </ul>
         <div>
 			<input placeholder="Search..." ng-model="searchText" />
