--- a/examples/serversidepaging.html
+++ b/examples/serversidepaging.html
@@ -8,20 +8,15 @@
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.2.0.debug.js"></script>
-    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/maingbjq.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/mainssp.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/largeLoad.js"></script>
-    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/jquery-ui-1.9.1.custom.min.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
     </script>
 </head>
-Try:
-
     <body ng-app="myApp" ng-controller="userController">
         <ul>
-            <li>Drag a column header to group by that column.</li>
-            <li>Click the x to make the groups disappear.</li>
-            <li>Rearrange the groups to change the grouping order.</li>
+            <li>Server-Side paging example</li>
         </ul>
         <div>
             <div style="margin: 10px;  width: 600px; height: 400px; float: left;" ng-grid="gridOptions">
