--- a/workbench/index.html
+++ b/workbench/index.html
@@ -21,6 +21,7 @@
         <div style="margin: 10px;  width: 1000px; height: 700px;" ng-grid="gridOptions">
         </div>
         <button ng-click="changeData()">Insert Rows</button>
+        <div>{{filterOpts.filterText}}</div>
         <span>mySelections: {{mySelections | json}}</span>
         <!--        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
                     </div>
