updating examples to version 1.2.2

--- a/examples/serversidepaging.html
+++ b/examples/serversidepaging.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="http://timothyswt.github.com/ng-grid/stylesheets/ng-grid.css" /> 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
     <script type="text/javascript" src="http://code.angularjs.org/1.0.2/angular.js"></script>
-    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.2.1.debug.js"></script>
+    <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/ng-grid-1.2.2.debug.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/mainssp.js"></script>
     <script type="text/javascript" src="http://timothyswt.github.com/ng-grid/javascripts/largeLoad.js"></script>
     <script>
@@ -14,7 +14,7 @@
 </head>
     <body ng-app="myApp" ng-controller="userController">
         <ul>
-            <li>Server-Side paging example</li>
+            <li>Server-Side paging and filtering example</li>
         </ul>
         <div>
             <div style="margin: 10px;  width: 600px; height: 400px; float: left;" ng-grid="gridOptions">
