--- a/workbench/index.html
+++ b/workbench/index.html
@@ -11,14 +11,14 @@
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui-1.9.1.custom.min.js"></script>
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="../ng-grid-1.2.2.debug.js"></script>
+    <script type="text/javascript" src="../ng-grid-1.3.0.debug.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
     </script>
 </head>
     <body ng-app="myApp" ng-controller="userController">
-        <div style="margin: 10px;  width: 1000px; height: 700px;" ng-grid="gridOptions">
+        <div style="position: absolute;  left: 0; right: 0; top: 0; bottom: 0;" ng-grid="gridOptions">
         </div>
         <button ng-click="changeData()">Insert Rows</button>
         <div>{{filterOpts.filterText}}</div>
