fixing boring examples

--- a/examples/groupbynodnd.html
+++ b/examples/groupbynodnd.html
@@ -19,8 +19,9 @@ Try:
     <body ng-app="myApp" ng-controller="userController">
         <ul>
             <li>Open the column menu.</li>
-            <li>Click the grouping icon to add grouping</li>
-            <li>click the groupign icon again to remove the grouping</li>
+            <li>Click the grouping icon to add grouping to the grid</li>
+            <li>Click another grouping icon to add nested grouping</li>
+            <li>Click the grouping icons again to remove the group.</li>
         </ul>
         <div>
             <div style="margin: 10px;  width: 600px; height: 400px; float: left;" ng-grid="gridOptions">
