--- a/workbench/index3.html
+++ b/workbench/index3.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui-1.9.1.custom.min.js"></script>
-    <script type="text/javascript" src="jquery.layout-latest.js"></script>
+    <script type="text/javascript" src="../lib/jquery.layout-latest.min.js"></script>
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="../ng-grid-1.3.0.debug.js"></script>
     <script type="text/javascript" src="main.js"></script>
