--- a/workbench/index3.html
+++ b/workbench/index3.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="../plugins/ngGridLayoutPlugin.js"></script>
     <script type="text/javascript" src="../ng-grid-1.3.0.debug.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="layoutMain.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
     </script>
@@ -28,11 +28,5 @@
 		<div class="ui-layout-south">South</div>
 		<div class="ui-layout-east">East</div>
 		<div class="ui-layout-west">West</div>
-        <!--<button ng-click="changeData()">Insert Rows</button>
-        <div>{{filterOpts.filterText}}</div>
-        <span>mySelections: {{mySelections | json}}</span>
-                <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
-                    </div>
-            <span>mySelections2: {{mySelections2 | json}}</span>-->
     </body>
 </html>
