adding fixes for issues #30 & #31

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -4,7 +4,11 @@
     <title>ng-grid workbench</title>
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="../ng-grid.css" />
-	
+    <style>
+        .foo {
+            background-color: blue;
+        }
+    </style>
     <script type="text/javascript" src="largeLoad.js"></script>
     <script type="text/javascript" src="largeTestData.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
