Performance improvements. Removed unused code. Updating to 1.3.1.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -24,10 +24,10 @@
     <body ng-app="myApp" ng-controller="userController">
         <div style="position: absolute;  left: 0; right: 0; top: 0; bottom: 0;" ng-grid="gridOptions">
         </div>
-        <button ng-click="changeData()">Insert Rows</button>
+        <!--<button ng-click="changeData()">Insert Rows</button>
         <div>{{filterOpts.filterText}}</div>
         <span>mySelections: {{mySelections | json}}</span>
-        <!--        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
+                <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
                     </div>
             <span>mySelections2: {{mySelections2 | json}}</span>-->
     </body>
