--- a/workbench/index.html
+++ b/workbench/index.html
@@ -4,18 +4,13 @@
     <title>ng-grid workbench</title>
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="../ng-grid.css" />
-    <style>
-        .foo {
-            background-color: blue;
-        }
-    </style>
     <script type="text/javascript" src="largeLoad.js"></script>
     <script type="text/javascript" src="largeTestData.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui-1.9.1.custom.min.js"></script>
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="../ng-grid-1.3.0.debug.js"></script>
+    <script type="text/javascript" src="../build/ng-grid.debug.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
