--- a/workbench/index3.html
+++ b/workbench/index3.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="../lib/jquery.layout-latest.min.js"></script>
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="../plugins/ngGridLayoutPlugin.js"></script>
-    <script type="text/javascript" src="../ng-grid-1.3.0.debug.js"></script>
+    <script type="text/javascript" src="../build/ng-grid.debug.js"></script>
     <script type="text/javascript" src="layoutMain.js"></script>
     <script>
         angular.module('myApp',['ngGrid']);
