Hotfixing issue #34. Adding group by example.

--- a/workbench/index2.html
+++ b/workbench/index2.html
@@ -18,7 +18,7 @@
     </script>
 </head>
     <body ng-app="myApp" ng-controller="userController">
-        <div style="width: 800px; height: 600px;" ng-grid="gridOptions">
+        <div style="width: 800px; height: 600px;" ng-grid="gridOptions2">
         </div>
         <button ng-click="changeData()">Insert Rows</button>
         <div>{{filterOpts.filterText}}</div>
