--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <script type="text/javascript" src="lib/angular.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
+  <script type="text/javascript" src="js/directives.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
   <script type="text/javascript" src="lib/ng-grid-1.3.2.debug.js"></script>
