--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
   <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
   <script type="text/javascript" src="lib/ng-grid-1.3.2.debug.js"></script>
+  
+  <!--controllers-->
+  <script type="text/javascript" src="partials/exampleDefinitions/exampleControllers.js"></script>
+  
 </body>
 </html>
