--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
   <script type="text/javascript" src="js/prettify.js"></script>
   <script type="text/javascript" src="lib/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="lib/jquery-ui/js/jquery-ui-1.9.1.custom.js"></script>
   <script type="text/javascript" src="lib/angular.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
