Updated to use ng-grid without version number.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <script type="text/javascript" src="js/directives.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="lib/ng-grid-1.3.3.debug.js"></script>
+  <script type="text/javascript" src="lib/ng-grid.debug.js"></script>
   
   <!--controllers-->
   <script type="text/javascript" src="partials/exampleDefinitions/exampleControllers.js"></script>
