Updated to latest ng grid.

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         </div>
     </div>
 
-  <script type="text/javascript" src="js/prettify.js"></script>
+  <script type="text/javascript" src="lib/prettify.js"></script>
   <script type="text/javascript" src="lib/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="lib/jquery-ui/js/jquery-ui-1.9.1.custom.js"></script>
   <script type="text/javascript" src="lib/angular.js"></script>
+  <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
+  <script type="text/javascript" src="lib/ng-grid.debug.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
   <script type="text/javascript" src="js/directives.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
-  <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="lib/ng-grid.debug.js"></script>
   
   <!--controllers-->
   <script type="text/javascript" src="partials/exampleDefinitions/exampleControllers.js"></script>
