--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 	<link rel="stylesheet" href="css/prettify.css"/>
 	<link rel="stylesheet" href="css/ng-grid.css"/>
 	<link rel="stylesheet" href="css/app.css"/>
+
+	<script type="text/javascript" src="lib/prettify.js"></script>
+	<script type="text/javascript" src="lib/jquery-1.8.2.min.js"></script>
+	<script type="text/javascript" src="lib/jquery-ui/js/jquery-ui-1.9.1.custom.js"></script>
+	<script type="text/javascript" src="lib/angular.js"></script>
+	<script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
+	<script type="text/javascript" src="lib/ng-grid.debug.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/services.js"></script>
+	<script type="text/javascript" src="js/directives.js"></script>
+	<script type="text/javascript" src="js/controllers.js"></script>
+	<script type="text/javascript" src="js/exampleControllers.js"></script>
 </head>
 
 <body ng-controller="PageNavigationCtrl">
@@ -32,21 +44,6 @@
         <div class="portal-footer-info">
             <p>ng-grid</p>    		
         </div>
-    </div>
-
-  <script type="text/javascript" src="lib/prettify.js"></script>
-  <script type="text/javascript" src="lib/jquery-1.8.2.min.js"></script>
-  <script type="text/javascript" src="lib/jquery-ui/js/jquery-ui-1.9.1.custom.js"></script>
-  <script type="text/javascript" src="lib/angular.js"></script>
-  <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="lib/ng-grid.debug.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/services.js"></script>
-  <script type="text/javascript" src="js/directives.js"></script>
-  <script type="text/javascript" src="js/controllers.js"></script>
-  
-  <!--controllers-->
-  <script type="text/javascript" src="partials/exampleDefinitions/exampleControllers.js"></script>
-  
+    </div> 
 </body>
 </html>
