--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
 	<link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.css"/>
 	<link rel="stylesheet" href="css/prettify.css"/>
-	<link rel="stylesheet" href="lib/jquery-ui/css/overcast/jquery-ui-1.9.1.custom.css"></script>
+	<link rel="stylesheet" href="lib/jquery-ui/css/overcast/jquery-ui-1.9.1.custom.css" />
 	<link rel="stylesheet" href="css/ng-grid.css"/>
 	<link rel="stylesheet" href="css/app.css"/>
 
