watching data array length instead
also fixed Total Items length to show 0 when array is empty

--- a/workbench/index2.html
+++ b/workbench/index2.html
@@ -20,9 +20,7 @@
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 800px; height: 600px;" ng-grid="gridOptions2">
         </div>
-        <button ng-click="changeData()">Insert Rows</button>
-        <div>{{filterOpts.filterText}}</div>
-        <span>mySelections: {{mySelections | json}}</span>
+        <button ng-click="changeData()">pop</button>
         <!--        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
                     </div>
             <span>mySelections2: {{mySelections2 | json}}</span>-->
