hotfixing data array watchers
Now the data will update properly when push/pop and data reassignment
happens. Splice is not fully supported. copy your array to a temp var,
splice, then reassign is the best way.

--- a/workbench/index2.html
+++ b/workbench/index2.html
@@ -21,6 +21,9 @@
         <div style="width: 800px; height: 600px;" ng-grid="gridOptions2">
         </div>
         <button ng-click="changeData()">pop</button>
+        
+        <button ng-click="resetData()">reset</button>
+        <button ng-click="spliceData()">splice</button>
         <!--        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
                     </div>
             <span>mySelections2: {{mySelections2 | json}}</span>-->
