Added modify example to index2.html

--- a/workbench/index2.html
+++ b/workbench/index2.html
@@ -24,6 +24,7 @@
         
         <button ng-click="resetData()">reset</button>
         <button ng-click="spliceData()">splice</button>
+        <button ng-click="modifyData()">modify</button>
         <!--        <div style="margin: 10px;  width: 600px; height: 400px;" ng-grid="gridOptions2">
                     </div>
             <span>mySelections2: {{mySelections2 | json}}</span>-->
