adding function to watch for language changes.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -21,5 +21,6 @@
         </div>
         <button ng-click="resetRows()">Reset Rows</button>
         <button ng-click="Add()">Insert Rows</button>
+        <button ng-click="changeLang()">change Language</button>
     </body>
 </html>
